--- a/style.css
+++ b/style.css
@@ -34,3 +34,13 @@ h1 {
     word-spacing: 20px;
 }
 
+@media (max-width: 576px) { 
+    .fixed-bottom {
+        height: 200px;
+        font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+        box-shadow: 0px -10px 10px rgba(0, 0, 0, 0.2);
+        letter-spacing: 5px;
+        
+    }
+ }
+
