--- a/style.css
+++ b/style.css
@@ -5,9 +5,12 @@ body {
 .logo {
     width: 500px;
     position: absolute;
-    top: 350px;
-    left: 960px;
-opacity: 0.5;
+    /* top: 350px;
+    left: 960px; */
+    top: 200px;
+    left: 700px;
+    opacity: 0.3;
+    animation: logo 2s infinite alternate;
 }
 
 table {
@@ -18,6 +21,9 @@ table {
     height: 30px;
     background : linear-gradient(to right, rgb(65, 105, 225), rgb(248, 101, 3), royalblue);
     box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.2);
+    animation: nav ease-out infinite alternate;
+    animation-play-state: running;
+    animation-duration: 0.3s;
     
 }
 
@@ -26,6 +32,7 @@ table {
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     box-shadow: 0px -10px 10px rgba(0, 0, 0, 0.2);
     letter-spacing: 5px;
+
     
 }
 
@@ -34,6 +41,30 @@ h1 {
     color: royalblue;
     letter-spacing: 10px;
     word-spacing: 20px;
+}
+
+@keyframes nav {
+    from {
+        background : linear-gradient(to right, rgb(65, 105, 225), rgb(248, 101, 3), royalblue);
+    }
+    
+    to {
+        background : linear-gradient(to right,rgb(248, 101, 3),  rgb(65, 105, 225), rgb(248, 101, 3));
+    }
+ 
+}
+
+@keyframes logo {
+    from {
+        transform: scale(0.5) ;
+    }
+
+    to {
+        transform: scale(1) ;
+    }
+
+    
+    
 }
 
 
